objects/vlocity_cmt__ContractEnvelope__c.object
<CustomObject>
    <description>Stores information about DocuSign envelopes created during the DocuSign eSignature process.</description>
    <fields>
        <fullName>vlocity_cmt__CompletedDate__c</fullName>
        <description>Date the envelope was completed</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract for which this envelope was created</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Document Envelopes</relationshipLabel>
        <relationshipName>ContractEnvelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractOpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity for which this envelope was created</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contract Document Envelopes</relationshipLabel>
        <relationshipName>ContractEnvelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order for which this envelope was created</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Contract Document Envelopes</relationshipLabel>
        <relationshipName>ContractEnvelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractQuoteId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote for which this envelope was created</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Contract Document Envelopes</relationshipLabel>
        <relationshipName>ContractEnvelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractVersionId__c</fullName>
        <description>Contract document version for which this envelope was created</description>
        <label>Contract Document</label>
        <referenceTo>vlocity_cmt__ContractVersion__c</referenceTo>
        <relationshipLabel>Contract Document Envelopes</relationshipLabel>
        <relationshipName>ContractEnvelopes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DeclinedDate__c</fullName>
        <description>Declined Date</description>
        <label>Declined Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentIdentifier__c</fullName>
        <description>Document Identifier</description>
        <label>Document Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentName__c</fullName>
        <description>Document Name</description>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EmailMessage__c</fullName>
        <defaultValue>&quot;Please sign the contract.&quot;</defaultValue>
        <description>Email message sent to the receipient</description>
        <label>Email Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EmailSubject__c</fullName>
        <defaultValue>&quot;Contract to sign&quot;</defaultValue>
        <description>Email subject on the Email message</description>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EnvelopeIdentifier__c</fullName>
        <description>Envelope Indentifier</description>
        <label>Envelope Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EnvelopeUri__c</fullName>
        <description>Envelope URI</description>
        <label>Envelope Uri</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastPollDate__c</fullName>
        <description>Last time polling status from DocuSign.</description>
        <inlineHelpText>Last time polling status from DocuSign.</inlineHelpText>
        <label>Last Poll Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SentDate__c</fullName>
        <description>Envelope Sent Date</description>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatusDate__c</fullName>
        <description>Date the Envelope status was updated</description>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Envelope Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ViewedDate__c</fullName>
        <description>Date when Document was Viewed</description>
        <label>Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VoidedDate__c</fullName>
        <description>Date when Envelope was voided</description>
        <label>Voided Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VoidedReason__c</fullName>
        <description>Reason why the Envelope was voided</description>
        <label>Voided Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract Document Envelope</label>
    <nameField>
        <displayFormat>ENV_{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Document Envelopes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>